# soillib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README_CMAKELISTS.md  pyproject.toml  todo.md
example/: State.py  __common__.py  catchment_pysheds.py  dem_catchment.py  dem_condition.py  dem_multiflow.py  dem_path_catchment.py  dem_path_flow.py  dem_process.py  erosion_basic.py  erosion_gpu.py  erosion_gpu_multi_base.py  erosion_gpu_multi_debris.py  erosion_gpu_multi_large.py  erosion_gpu_multi_nothermal.py  erosion_gpu_multi_thermal.py  erosion_gpu_multires.py  erosion_gpu_multiscale.py  erosion_gpu_multiscale_nothermal.py  erosion_gpu_multiscale_uplift.py  erosion_quad.py  kdtree.py  kdtree_old.py  markov_condition.py  meander_map.py  pca_tree.py  pysheds_process.py  rbf.py  rbf_acc.py  rbf_fit.py  rbf_rand.py  rbf_recon.py  test.py  tiff_merge.py  tiff_mesh.py  tiff_normal.py  tiff_relief.py  tiff_view.py
example/path_integral/: catchment_pysheds.py  path_catchment.py
examples/: erosion_basic.py  erosion_basic_quad.py  erosion_quad.py  test_buf.py  test_buffer.py  test_index.py  test_layer.py  test_tiff.py  tif_normal.py  tiff_merge.py  tiff_normal.py  tiff_relief.py  tiff_view.py
ext/: CMakeLists.txt
model/basic_hydrology/: Makefile  config.yaml  main.cpp
model/basic_hydrology/source/: world.hpp
model/basic_hydrology_mixture/: config.yaml  main.cpp
model/basic_hydrology_porosity/: config.yaml  main.cpp
model/basic_hydrology_porosity/source/: world.hpp
model/basic_wind/: config.yaml  main.cpp
model/basic_wind/source/: world.hpp
model/quad_hydrology/: main.cpp
model/quad_hydrology/source/: world.hpp
python/: CMakeLists.txt  METADATA  Makefile  WHEEL
python/soillib/: __init__.py  util.py
python/source/: _module.cpp  buffer.cpp  flow.cu  glm.hpp  index.cpp  interop.hpp  io.cpp  layer.cpp  matrix.cpp  model.cpp  node.cpp  op.cpp  particle.cpp  shape.cpp  soillib.cpp  tensor.cpp  util.cpp
soillib/: soillib.hpp
soillib/io/: geotiff.hpp  image.hpp  img.hpp  png.hpp  tiff.hpp  yaml.hpp
soillib/io/img/: img.hpp  png.hpp  tiff.hpp
soillib/map/: _map.hpp  basic.hpp  layer.hpp  layermap.hpp  quad.hpp  quadtree.hpp
soillib/matrix/: binary.hpp  mixture.hpp  porous.hpp  singular.hpp
soillib/model/: cascade.hpp  surface.hpp
soillib/model/physics/: cascade.hpp  (+1 more)
soillib/particle/: particle.hpp  vegetation.hpp  water.hpp  wind.hpp
soillib/util/: buf.hpp  index.hpp  newbuf.hpp  noise.hpp  pool.hpp  slice.hpp  surface.hpp  yaml.hpp
source/: CMakeLists.txt  Makefile  soillib.hpp
source/core/: buffer.cu  buffer.hpp  error.hpp  index.hpp  matrix.hpp  model.hpp  node.hpp  texture.hpp  types.hpp  yield.hpp
source/deprecated/model/: surface.hpp
source/deprecated/particle/: vegetation.hpp  wind.hpp
source/index/: flat.hpp  index.hpp  layer.hpp  quad.hpp
source/io/: geotiff.hpp  mesh.hpp  tiff.hpp  yaml.hpp
source/layer/: cached.hpp  computed.hpp  const.hpp  constant.hpp  layer.hpp  lerp.hpp  noise.hpp  normal.hpp  stored.hpp
source/layer/algorithm/: lerp.hpp  noise.hpp  normal.hpp
source/matrix/: matrix.hpp  mixture.hpp  singular.hpp
source/model/: cascade.hpp  surface.hpp
source/node/: cached.hpp  common.cu  common.hpp  computed.hpp  constant.hpp  erosion.cu  erosion.hpp  erosion_thermal.cu  flow.cu  flow.hpp  lerp.cu  math.cu  math.hpp  noise.hpp  normal.hpp
source/node/algorithm/: common.cu  common.hpp  flow.cu  flow.hpp  flow_test.hpp  noise.hpp  normal.hpp
source/op/: common.cu  common.hpp  erosion.cu  erosion.hpp  erosion_thermal.cu  flow.cu  flow.hpp  gather.hpp  math.cu  math.hpp  noise.hpp  normal.hpp
source/particle/: cascade.hpp  particle.hpp  vegetation.hpp  water.hpp  wind.hpp
source/soillib/: soillib.hpp
source/soillib/core/: buffer.cu  buffer.hpp  error.hpp  operation.hpp  shape.hpp  tensor.hpp  types.hpp  vector.hpp  view.hpp
source/soillib/index/: flat.hpp  kdtree.cu  kdtree.hpp
source/soillib/io/: geotiff.hpp  mesh.hpp  tiff.hpp
source/soillib/model/: erosion.cu  erosion.hpp  erosion_fluvial.cu  erosion_map.cu  erosion_thermal.cu  flow.cu  flow.hpp
source/soillib/model/filter/: filter.cu  filter.hpp
source/soillib/model/grad/: grad.cu  grad.hpp
source/soillib/model/graph/: graph.cu  graph.hpp
source/soillib/model/path/: erosion.cu  erosion.hpp  erosion_fluvial.cu  erosion_map.cu  erosion_thermal.cu  path.cu  path.hpp  sample.hpp
source/soillib/model/sculpt/: sculpt.cu  sculpt.hpp
source/soillib/op/: common.cu  common.hpp  cu_common.cu  erosion.cu  erosion.hpp  erosion_fluvial.cu  erosion_map.cu  erosion_thermal.cu  flow.cu  gather.hpp  math.cu  math.hpp  noise.hpp  normal.hpp  pointcloud.cu  pointcloud.hpp  rbf.cu  rbf.hpp
source/soillib/util/: error.hpp  yield.hpp
source/util/: array.hpp  buf.hpp  buffer.hpp  dist.hpp  error.hpp  index.hpp  noise.hpp  pool.hpp  select.hpp  shape.hpp  slice.hpp  texture.hpp  timer.hpp  types.hpp  yield.hpp
source/util/new/: buf.hpp  geotiff.hpp  shape.hpp  slice.hpp  tiff.hpp
test/: Makefile  test_buffer.py  test_index.py  test_layer.py  test_node.py
tool/relief/: main.cpp
tool/viewer/: Makefile
tools/SimpleHydrology/: Makefile  config.yaml  main.cpp  out.tiff
tools/SimpleWindErosion/: Makefile  config.yaml  main  main.cpp  out.tiff  world.hpp
tools/basic_hydrology/: README.md  main.cpp
tools/basic_hydrology_mixture/: config.yaml  main.cpp
tools/basic_hydrology_porosity/: config.yaml  main.cpp
tools/basic_wind/: main.cpp
tools/buf_test/: main.cpp
tools/layer_hydrology/: Makefile  config.yaml  main.cpp  model.hpp
tools/map_normal/: main.cpp
tools/map_relief/: main.cpp
tools/quad_hydrology/: config.yaml  main.cpp
tools/relief/: Makefile  main  main.cpp
tools/render/: main.cpp
tools/run/: Makefile  main  main.cpp
tools/tif_merge/: model.hpp
tools/tif_normal/: Makefile  main.cpp
tools/tif_relief/: main.cpp
tools/tif_view/: main.cpp  model.hpp  vertexpool.cpp
tools/view/: main.cpp  model.hpp
tools/view_tif/: main.cpp  model.hpp
tools/viewer/: main.cpp  model.hpp
(+36 files in other folders)
